<resources>
    <string name="app_name">GroupSync</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sign Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_images">Images</string>
    <string name="menu_newevent">New Event</string>
    <string name="menu_calendar">Calendar</string> <!-- New string for CalendarFragment -->


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="menu_eventdetails">Event Details</string>
    <string name="join_event">Join Event</string>
</resources>