<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!-- Existing fragments -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.groupsync.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.groupsync.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_images"
        android:name="com.example.groupsync.ui.gallery.ImagesFragment"
        android:label="@string/menu_images"
        tools:layout="@layout/fragment_images" />

    <fragment
        android:id="@+id/nav_newevent"
        android:name="com.example.groupsync.ui.newevent.NewEventFragment"
        android:label="@string/menu_newevent"
        tools:layout="@layout/fragment_newevent" />

    <fragment
        android:id="@+id/nav_eventdetails"
        android:name="com.example.groupsync.ui.event.EventDetailsFragment"
        android:label="@string/menu_eventdetails"
        tools:layout="@layout/fragment_eventdetails">
        <argument
            android:name="firestoreId"
            app:argType="string"
            android:defaultValue=""/>
    </fragment>

<!--    &lt;!&ndash; New fragment for the calendar page &ndash;&gt;-->
<!--    <fragment-->
<!--        android:id="@+id/nav_calendar"-->
<!--        android:name="com.example.groupsync.ui.calendar.CalendarFragment"-->
<!--        android:label="@string/menu_calendar"-->
<!--        tools:layout="@layout/activity_calendar" />-->

</navigation>
