<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/round_bg_edittext"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/round_bg_edittext"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_bg_edittext"
        android:backgroundTint="@color/colorMain"
android:textColor="@color/white"
        android:text="@string/login" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>
