<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    android:gravity="center">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmail"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        android:background="@drawable/round_bg_edittext"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/round_bg_edittext"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_bg_edittext"
        android:backgroundTint="@color/colorMain"
        android:textColor="@color/white"
        android:text="@string/register" />
</LinearLayout>
